done dark mode but have some bug hover

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,6 +11,19 @@
     .carousel__title {
         font-size: 40px;
     }
+
+    /* FOOTER  */
+    .footer__brand {
+        margin-bottom: 4px;
+    }
+
+    .footer__title {
+        margin-bottom: 8px;
+    }
+
+    .footer__icon {
+        margin-top: 16px;
+    }
 }
 
 @media screen and (max-width: 767.98px) {
